[project]
name = "deconvolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "pathlib>=1.0.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
]
